<resources>
    <string name="app_name">FootballDataApp</string>
    <string name="leaguename">LeagueName</string>
    <string name="country">Country</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="loading">\\</string>
    <string name="error_text">Oops! 😰 Unable to connect to network. Make sure your internet is turned on, then restart your app</string>
    <string name="api_permission_denied">The resource you are looking for is restricted. Please check your subscription for permission</string>
    <string name="competitions">Competitions</string>
    <string name="premiership">Premiership</string>
    <string name="select_team_by_click">Select Team By Click</string>
    <string name="founded">Founded:</string>
    <string name="_01_may_1886">01 May 1886</string>
    <string name="club_details">Club Details</string>
    <string name="hennes_weisweiller_allee_1">Hennes-Weisweiller-Allee 1</string>
    <string name="address">Address</string>
    <string name="phone_number">Phone Number</string>
    <string name="_49_02161_92930">+49(02161)92930</string>
    <string name="website">Website</string>
    <string name="info_borussia_de">info@borussia.de</string>
    <string name="http_www_borussia_de">http://www.borussia.de</string>
    <string name="club_colors">Club colors</string>
    <string name="nickname">NickName</string>
    <string name="email_address">Email Address</string>
    <string name="team_players">Team Players</string>
    <string name="player_name">Player Name</string>
    <string name="position">Position</string>
    <string name="country">Country</string>
    <string name="date_of_birth">Date of Birth</string>
    <string name="m_gladbach">M\'gladbach</string>
</resources>