<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#4169F0AE"
    tools:context=".ui.FootballDetailsFragment">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/tool_bar_activity"
        android:layout_width="match_parent"
        android:layout_height="?android:attr/actionBarSize"
        android:background="@color/white"
        android:backgroundTint="#00C853"
        tools:ignore="MissingConstraints">

        <TextView
            android:id="@+id/select_team_text_view"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/select_team_by_click"
            android:textColor="@color/ash"
            android:textSize="20sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="@+id/tool_bar_activity"
            app:layout_constraintEnd_toEndOf="@+id/tool_bar_activity"
            app:layout_constraintStart_toStartOf="parent" />
    </androidx.appcompat.widget.Toolbar>

    <ImageView
        android:id="@+id/club_image"
        android:layout_width="match_parent"
        android:layout_height="150dp"
        android:src="@drawable/ic_launcher_background"
        app:layout_constraintTop_toBottomOf="@id/tool_bar_activity" />

    <TextView
        android:id="@+id/club_details"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="15dp"
        android:layout_marginTop="32dp"
        android:text="@string/club_details"
        android:textColor="#00C853"
        android:textSize="15sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/club_image" />

    <androidx.cardview.widget.CardView
        android:id="@+id/card_view"
        android:layout_width="match_parent"
        android:layout_height="300dp"
        android:layout_marginStart="12dp"
        android:layout_marginTop="32dp"
        android:layout_marginEnd="12dp"
        android:backgroundTint="#80FFFFFF"
        app:cardCornerRadius="10dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/club_details">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="300dp">

            <TextView
                android:id="@+id/founded_text_view"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="12dp"
                android:text="@string/founded"
                android:textSize="15sp"
                android:textStyle="bold"
                app:layout_constraintStart_toStartOf="@id/guideline6"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/founded_date_text_view"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="12dp"
                android:text="@string/_01_may_1886"
                android:textSize="15sp"
                android:textStyle="bold"
                app:layout_constraintStart_toStartOf="@id/guideline4"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/email_address_text_view"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:text="@string/email_address"
                android:textSize="12sp"
                android:textStyle="bold"
                app:layout_constraintStart_toStartOf="@id/guideline6"
                app:layout_constraintTop_toBottomOf="@id/website_text_view" />

            <TextView
                android:id="@+id/nickname_text_view"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:text="@string/nickname"
                android:textSize="15sp"
                android:textStyle="bold"
                app:layout_constraintStart_toStartOf="@id/guideline6"
                app:layout_constraintTop_toBottomOf="@id/founded_text_view" />

            <TextView
                android:id="@+id/team_name_text_view"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:text="@string/m_gladbach"
                android:textSize="15sp"
                android:textStyle="bold"
                app:layout_constraintStart_toStartOf="@id/guideline4"
                app:layout_constraintTop_toBottomOf="@id/founded_date_text_view" />

            <TextView
                android:id="@+id/address_text_view"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:text="@string/address"
                android:textSize="15sp"
                android:textStyle="bold"
                app:layout_constraintStart_toStartOf="@id/guideline6"
                app:layout_constraintTop_toBottomOf="@id/nickname_text_view" />

            <TextView
                android:id="@+id/address_name_text_view"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:text="@string/hennes_weisweiller_allee_1"
                android:textSize="12sp"
                android:textStyle="bold"
                app:layout_constraintStart_toStartOf="@id/guideline4"
                app:layout_constraintTop_toBottomOf="@+id/team_name_text_view" />

            <TextView
                android:id="@+id/phone_number_text_view"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:text="@string/phone_number"
                android:textSize="12sp"
                android:textStyle="bold"
                app:layout_constraintStart_toStartOf="@id/guideline6"
                app:layout_constraintTop_toBottomOf="@id/address_text_view" />

            <TextView
                android:id="@+id/phone_number_user_text_view"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:text="@string/_49_02161_92930"
                android:textSize="12sp"
                android:textStyle="bold"
                app:layout_constraintStart_toStartOf="@id/guideline4"
                app:layout_constraintTop_toBottomOf="@+id/address_name_text_view" />

            <TextView
                android:id="@+id/website_text_view"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:text="@string/website"
                android:textSize="12sp"
                android:textStyle="bold"
                app:layout_constraintStart_toStartOf="@id/guideline6"
                app:layout_constraintTop_toBottomOf="@id/phone_number_text_view" />

            <TextView
                android:id="@+id/website_url_text_view"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:text="@string/http_www_borussia_de"
                android:textSize="12sp"
                android:textStyle="bold"
                app:layout_constraintStart_toStartOf="@id/guideline4"
                app:layout_constraintTop_toBottomOf="@id/phone_number_user_text_view" />


            <TextView
                android:id="@+id/email_url_text_view"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:text="@string/info_borussia_de"
                android:textSize="12sp"
                android:textStyle="bold"
                app:layout_constraintStart_toStartOf="@id/guideline4"
                app:layout_constraintTop_toBottomOf="@id/website_url_text_view" />

            <TextView
                android:id="@+id/club_colors"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:text="@string/club_colors"
                android:textSize="12sp"
                android:textStyle="bold"
                app:layout_constraintStart_toStartOf="@id/guideline6"
                app:layout_constraintTop_toBottomOf="@id/email_address_text_view" />

            <com.google.android.material.imageview.ShapeableImageView
                android:layout_width="20dp"
                android:layout_height="20dp"
                android:layout_marginTop="20dp"
                android:background="#00C853"
                android:src="@drawable/circular_image"
                app:layout_constraintStart_toStartOf="@id/guideline4"
                app:layout_constraintTop_toBottomOf="@id/email_url_text_view" />

            <androidx.constraintlayout.widget.Guideline
                android:id="@+id/guideline4"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                app:layout_constraintGuide_end="183dp" />

            <androidx.constraintlayout.widget.Guideline
                android:id="@+id/guideline6"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                app:layout_constraintGuide_begin="20dp" />


        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.cardview.widget.CardView>

    <TextView
        android:id="@+id/team_players"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="15dp"
        android:layout_marginTop="32dp"
        android:text="@string/team_players"
        android:textColor="#00C853"
        android:textSize="15sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/card_view" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/details_recycler_view"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="15dp"
        android:layout_marginTop="32dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/team_players"
        tools:listitem="@layout/football_details_recyclerview" />
    <ProgressBar
        android:id="@+id/football_details_progress_bar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.635" />

</androidx.constraintlayout.widget.ConstraintLayout>